soroban-sdk/tests/trybuild/contractimport_with_sha256_verify_fail.stderr
error: sha256 does not match, expected: 26f5c00d05439950c7edbfcc1f2bd47f383094b2105f8473168407636b050258
 --> tests/trybuild/contractimport_with_sha256_verify_fail.rs:3:5
  |
3 |     sha256 = "0000000000000000000000000000000000000000000000000000000000000000",
  |     ^^^^^^
